# DsaWithC

./: CMakeLists.txt  README.md
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  windows.yml
cmake/: Coverage.cmake  ProjectBuildFlags.cmake
include/dsa/common/: error_codes.h
include/dsa/list/: singly_linked_list.h  slist.h
include/dsa/numeric/: lsqe.h  polynomial_interpolation.h  root.h
include/dsa/search/: binary_search.h
include/dsa/sort/: insertion_sort.h
include/dsa/utility/: all_of.h  count_if.h  find_if.h  find_if_not.h  for_each.h  max_element.h  min_element.h  reverse.h
libs/: CMakeLists.txt
libs/searching/: CMakeLists.txt
libs/sorting/: CMakeLists.txt
libs/sorting/insertion_sort/: CMakeLists.txt  insertion_sort.c  insertion_sort.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  error_codes.c
src/list/: CMakeLists.txt  singly_linked_list.c  slist.c
src/numeric/: CMakeLists.txt  lsqe.c  polynomial_interpolation.c  root.c
src/search/: CMakeLists.txt  binary_search.c
src/sort/: CMakeLists.txt  insertion_sort.c
src/sorting/: CMakeLists.txt  insertion_sort.c
src/utility/: CMakeLists.txt  all_of.c  count_if.c  find_if.c  find_if_not.c  for_each.c  max_element.c  min_element.c  reverse.c
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_error_codes.cpp
tests/list/: CMakeLists.txt  test_slist.cpp
tests/numeric/: CMakeLists.txt  test_lsqe.cpp  test_polynomial_interpolation.cpp  test_root.cpp
tests/search/: CMakeLists.txt  test_binary_search.cpp
tests/sort/: CMakeLists.txt  test_insertion_sort.cpp
tests/sorting/: CMakeLists.txt  test_insertion_sort.cpp
tests/utility/: CMakeLists.txt  test_for_each.cpp  test_max_element.cpp  test_min_element.cpp  test_reverse.cpp
